# Fractals

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HelloWorld  Main  Notes.md  README.md  example.txt  main.cpp  test.txt
examples/: Golden Time [LN].torrent  [HYSUB]Kaifuku Jutsushi no Yarinaoshi[10][GB_MP4][1920X1080].mp4.torrent  [KiruaSubs] Yesterday wo Utatte - Extra 04.ass.torrent  loghorizon.torrent  myTorrent.torrent  myTorrent2.torrent  out.txt  test.torrent
include/: CMakeLists.txt  Request.h  maybe.h  utils.h
include/app/: Client.h  Feedback.h  ScreenTicker.h  TerminalInput.h  TorrentController.h  TorrentDisplay.h  TorrentView.h  UI.h
include/common/: encode.h  logger.h  maybe.h  utils.h
include/fractals/: AppId.h
include/fractals/app/: AppEventQueue.h  Client.h  Event.h  Feedback.h  ScreenTicker.h  TerminalInput.h  TorrentController.h  TorrentDisplay.h  TorrentDisplayEntry.h  TorrentView.h
include/fractals/common/: CurlPoll.h  FullDuplexQueue.h  Tagged.h  TcpService.h  WorkQueue.h  encode.h  logger.h  maybe.h  stacktrace.h  utils.h
include/fractals/disk/: DiskEventQueue.h  DiskIOService.h  Event.h  IOLayer.h
include/fractals/network/epoll/: Epoll.h  Epoll.ipp  Error.h  Event.h  IEpoll.h
include/fractals/network/http/: Announce.h  AnnounceEventQueue.h  AnnounceService.h  AnnounceService.ipp  Event.h  Peer.h  Request.h  RequestAnnounceQueue.h  Tracker.h  TrackerClient.h  TrackerRequestQueue.h  TrackerService.h
include/fractals/network/p2p/: AnnounceService.h  BitTorrent.h  BitTorrentEncoder.h  BitTorrentManager.h  BitTorrentManager.ipp  BitTorrentMsg.h  BufferManager.h  BufferedQueueManager.h  Client.h  ConcurrentTimer.h  Connection.h  ConnectionEventHandler.h  ConnectionEventHandler.ipp  ConnectionsEventHandler.txt.cpp  Epoll.h  Epoll.ipp  EpollMsgQueue.h  EpollService.h  EpollService.ipp  EpollServiceEvent.h  Event.h  EventHandlers.h  Message.h  MessageType.h  PeerEvent.h  PeerEventQueue.h  PeerFd.h  PeerManager.h  PeerService.h  PeerTracker.h  PeerWork.h  PieceStateManager.h  Protocol.h  Protocol.ipp  ProtocolManager.h  ProtocolState.h  ReceiveClient.h  ReceiveClient.ipp  Receiver.h  Receiver.ipp  (+2 more)
include/fractals/persist/: Event.h  Models.h  PersistClient.h  PersistEventQueue.h  PersistService.h  PersistService.ipp  StorageEventQueue.h  announce_model.h  announce_peer_model.h  data.h  piece_model.h  storage.h  torrent_model.h
include/fractals/sync/: QueueCoordinator.h
include/fractals/torrent/: Bencode.h  BencodeConvert.h  File.h  FileData.h  MetaInfo.h  Piece.h  PieceData.h  Torrent.h  TorrentIO.h  TorrentMeta.h
include/network/: TrackerRequest.h
include/network/http/: Announce.h  Peer.h  Tracker.h
include/network/p2p/: Announce.h  BitTorrent.h  Client.h  ConcurrentTimer.h  Connection.h  ConnectionEnded.h  Message.h  MessageType.h  PeerId.h  PeerListener.h  PeerManager.h  PeerWork.h  Protocol.h  Response.h
include/persist/: announce_model.h  announce_peer_model.h  data.h  init_db.h  piece_model.h  storage.h  torrent_model.h
include/torrent/: BencodeConvert.h  MetaInfo.h  PieceData.h  Request.h  Torrent.h
src/: CMakeLists.txt  InfoDict.h  MetaInfo.h  main.cpp
src/app/: Client.cpp  Feedback.cpp  ScreenTicker.cpp  TerminalInput.cpp  TorrentController.cpp  TorrentDisplay.cpp  TorrentView.cpp  UI.cpp
src/common/: encode.cpp  utils.cpp
src/fractals/app/: Client.cpp  Feedback.cpp  ScreenTicker.cpp  TerminalInput.cpp  TorrentController.cpp  TorrentDisplay.cpp  TorrentDisplayEntry.cpp  TorrentView.cpp
src/fractals/common/: CurlPoll.cpp  encode.cpp  utils.cpp
src/fractals/disk/: IOLayer.cpp
src/fractals/network/epoll/: Epoll.cpp  Error.cpp  Event.cpp  IEpoll.cpp
src/fractals/network/http/: Announce.cpp  AnnounceService.cpp  Peer.cpp  Request.cpp  Tracker.cpp  TrackerClient.cpp  TrackerService.cpp
src/fractals/network/p2p/: AnnounceService.cpp  BitTorrent.cpp  BitTorrentEncoder.cpp  BitTorrentManager.cpp  BitTorrentMsg.cpp  BufferManager.cpp  BufferedQueueManager.cpp  Client.cpp  Connection.cpp  ConnectionEventHandler.cpp  Epoll.cpp  EpollService.cpp  EpollServiceEvent.cpp  EpollWrapper.cpp  Event.cpp  Message.cpp  MessageType.cpp  PeerEvent.cpp  PeerManager.cpp  PeerTracker.cpp  PieceStateManager.cpp  Protocol.cpp  ReceiveClient.cpp  Receiver.cpp
src/fractals/persist/: PersistClient.cpp  PersistService.cpp  data.cpp  storage.cpp
src/fractals/torrent/: Bencode.cpp  File.cpp  Piece.cpp  PieceData.cpp  Torrent.cpp  TorrentIO.cpp  TorrentMeta.cpp
src/network/: TrackerRequest.cpp
src/network/http/: Peer.cpp  Tracker.cpp
src/network/p2p/: BitTorrent.cpp  Client.cpp  Connection.cpp  Message.cpp  MessageType.cpp  PeerId.cpp  PeerListener.cpp  PeerManager.cpp
src/persist/: data.cpp  storage.cpp
src/torrent/: MetaInfo.cpp  MetaInfo.h  PieceData.cpp  Request.cpp  Torrent.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  testCurlPoll.cpp  testEncode.cpp  testMaybe.cpp  testUtils.cpp  testWorkQueue.cpp
test/disk/: CMakeLists.txt  testDiskIOService.cpp
test/network/http/: CMakeLists.txt  testAnnounceService.cpp  testTracker.cpp  testTrackerRequest.cpp
test/network/p2p/: CMakeLists.txt  testBitTorrentEncoder.cpp  testBitTorrentManager.cpp  testBufferManager.cpp  testBufferedQueueManager.cpp  testConnectionReadHandler.cpp  testConnectionWriteHandler.cpp  testEpoll.cpp  testPeerService.cpp  testPieceStateManager.cpp  testProtocol.cpp  testReceiveClient.cpp  testReceiver.cpp  testWorkQueue.cpp
test/persist/: CMakeLists.txt  testPersistService.cpp
test/test_data/: Path.hpp
test/test_data/dummy_torrent/: MyTorrent.torrent
test/test_data/dummy_torrent/dir1/dir2/: test2 3.txt  test2.txt
